satrt page problem fixed

--- a/todo
+++ b/todo
@@ -9,4 +9,5 @@ wordpress:
   -   add wordpress users : done
   -   construct the virtual machine
 
--   read about volumes more : parametrs...
+-   read about drivers more : parametrs...
+-   watch tutorial videos:
